--- a/templates/monitoring/index.html
+++ b/templates/monitoring/index.html
@@ -11,10 +11,11 @@
 {% block content %}
     <H2>Статистика для сервера {{ server }}</H2>
     <style type="text/css">
-    body{
-        font-family: Tahoma;
-        font-size: 14px;
-    }
+        body {
+            font-family: Tahoma;
+            font-size: 14px;
+        }
+
         .error_max {
             background: red;
         }
@@ -67,7 +68,8 @@
         </form>
         <form action="{{ request.path }}" method="get">
             <p><label for="date_from">От даты:</label>
-                <input id="date_from" type="text" name="date_from" maxlength="100" value="{{ date_from|date:"Y-m-d" }}"/></p>
+                <input id="date_from" type="text" name="date_from" maxlength="100"
+                       value="{{ date_from|date:"Y-m-d" }}"/></p>
 
             <p><label for="date_to">До даты:</label>
                 <input type="text" name="date_to" id="date_to" value="{{ date_to|date:"Y-m-d" }}"/></p>
@@ -76,26 +78,15 @@
     </div>
 
     <table border="1px">
-        <thead>
-        <tr>
-            <th>date</th>
-            <th>diff</th>
-            <th>total</th>
-        </tr>
-        </thead>
-        {% for stat in stats %}
-            <tr class="
-                {% if stat.diff > limits.max %}
-                    error_max
-                {% else %}
-                 {% if stat.diff < limits.min %}
-                    error_min
-                {% else %}
-                    norm
-                {% endif %}{% endif %}">
-                <td>{{ stat.date|date:"Y-m-d h:i" }}</td>
-                <td>{{ stat.diff|intspace }} </td>
-                <td>{{ stat.value|intspace }} </td>
+    <tr>
+
+    </tr>
+        {% for key, stat in stats.items %}
+            <tr>
+                <td>{{ key|date:"Y-m-d h:i" }}</td>
+                {% for server_id, server_stat in stat.items %}
+                    <td class="{% if server_stat.diff > limits.max %}error_max{% else %}{% if server_stat.diff < limits.min %}error_min{% else %}norm{% endif %}{% endif %}">{{ server_stat.diff|intspace }}</td>
+                {% endfor %}
             </tr>
         {% endfor %}
     </table>
