--- a/templates/monitoring/index.html
+++ b/templates/monitoring/index.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block title %}My amazing blog{% endblock %}
-
+{% block sidebar %}{% endblock %}
 {% if errors %}
     {% block errors %}
         <span>{{ errors }}</span>
@@ -9,7 +9,7 @@
 {% endif %}
 
 {% block content %}
-    <H2>Статистика для сервера {{ server }}</H2>
+    <H2>Статистика серверов</H2>
     <style type="text/css">
         body {
             font-family: Tahoma;
@@ -42,9 +42,6 @@
         }
 
         .right {
-            float: right;
-            margin-left: 75%;
-            height: 0;
             width: 25%;
         }
 
@@ -66,26 +63,22 @@
                 <input type="text" name="limits.min" id="limits.min" value="{{ limits.min }}"/></p>
             <input type="submit" value="Сохранить"/>
         </form>
-        <form action="{{ request.path }}" method="get">
-            <p><label for="date_from">От даты:</label>
-                <input id="date_from" type="text" name="date_from" maxlength="100"
-                       value="{{ date_from|date:"Y-m-d" }}"/></p>
-
-            <p><label for="date_to">До даты:</label>
-                <input type="text" name="date_to" id="date_to" value="{{ date_to|date:"Y-m-d" }}"/></p>
-            <input type="submit" value="Сохранить"/>
-        </form>
     </div>
+    <br>
 
     <table border="1px">
-    <tr>
-
-    </tr>
+        <tr>
+            <th>time</th>
+            {% for name in server_names %}
+                <th><a href="/monitoring/{{ name }}">{{ name }}</a></th>
+            {% endfor %}
+        </tr>
         {% for key, stat in stats.items %}
             <tr>
-                <td>{{ key|date:"Y-m-d h:i" }}</td>
-                {% for server_id, server_stat in stat.items %}
-                    <td class="{% if server_stat.diff > limits.max %}error_max{% else %}{% if server_stat.diff < limits.min %}error_min{% else %}norm{% endif %}{% endif %}">{{ server_stat.diff|intspace }}</td>
+                <td>{{ key }}</td>
+                {% for server_stat in stat %}
+                    <td class="{% if server_stat.diff > limits.max %}error_max
+                        {% else %}{% if server_stat.diff < limits.min %}error_min{% else %}norm{% endif %}{% endif %}">{{ server_stat.diff|intspace }}</td>
                 {% endfor %}
             </tr>
         {% endfor %}
